<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">LEDX Remote</string>
    <string name="settings">Настройки</string>
    <string name="quit">Выход</string>
    <string name="tutor">Советы</string>
    <string name="br_cast">По IP адресу</string>
    <string name="br_cast_smr">Переключает между широковещательной передачей и одим IP адресом</string>
    <string name="ip_adr">IP адрес</string>
    <string name="ip_adr_smr">Настроеный IP адрес контроллера</string>
    <string name="port_adr">Порт</string>
    <string name="port_adr_smr">Порт для подключения к контроллеру</string>
    <string name="about">О программе</string>
    <string name="about_smr">Информация о программе и правообладателях</string>
    <string name="mainset">Основные</string>
    <string name="pref_sys">Программа</string>
    <string name="about_txt">Автор: Гуркин Иван\nCopyright © 2011 <a href="http://ledx.ru/">ledx.ru</a>\nВсе права принадлежат ledx.ru\nEmail: <a href="mailto:support@ledx.ru">support@ledx.ru</a></string>
    <string name="OK">ОК</string>
    <string name="cans">Отмена</string>
    <string name="help_text_cont">Вседите по порядку, через запятую, названия контроллеров</string>
    <string name="cont_list_hint">Бар,Танцпол и т.д.</string>
    <string name="err_wifi">Не подключен WiFi.\nВключите и попробуйте еще раз.</string>
    <string name="hnt_2">Скорость анимации по умолчаню по середине, что соотвествует нормальному воспроизведению.</string>
    <string name="hnt_1">Спомощью кнопок программ анимации можно переключаться между разными программами.</string>
    <string name="hnt_3">Спомощью палитры выбора цвета можно заставить светиться одним цветом.</string>
    <string name="hnt_4">Яркость по умолчанию находится в крайне правом положении, что соответствует максимальной яркости.</string>
    <string name="hnt_5">При долгом нажатии на список контроллеров появится диалог в котором можно изменить список контроллеров.</string>
    <string name="hnt_6">При долгом нажатии на один из элементов цветов появится диалог в котором можно задать свой цвет.</string>
    <string name="enb_wifi">Включить</string>
    <string name="cl_ch">Выбор цвета</string>
    <string name="varn">Внимание</string>
    <string name="control">Контроллеры</string>
</resources>
