<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/hnt_1"
            android:textSize="16dip" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dim_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/hnt_2"
            android:textSize="16dip" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dim_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/hnt_3"
            android:textSize="16dip" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dim_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/hnt_4"
            android:textSize="16dip" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dim_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/hnt_5"
            android:textSize="16dip" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dim_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/hnt_6"
            android:textSize="16dip" />
    </LinearLayout>

</ScrollView>